# rusty-bird

./: Cargo.toml  app.yaml  index.html
src/: bird.rs  main.rs  ui.rs
