[package]
name = "rusty-bird"
version = "0.1.0"
edition = "2024"

[patch.crates-io]
getrandom = { git = "https://github.com/benfrankel/getrandom" }

[dependencies]
accesskit = "0.21.1"
bevy = { version = "0.17.2", features= ["experimental_bevy_ui_widgets"]}
csgrs = { git = "https://github.com/sambskn/csgrs.git", branch="bump-geo", features=["bevymesh"] }
geo = "0.31"
geo-types = "0.7.17"
rand = "0.9.2"

[profile.release]
# make small
opt-level = "z"
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = true
